# python-project-50

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  build_diff.py  generate_diff.py  read_file.py
gendiff/formatters/: format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_gendiff.py
tests/expected/: file3.txt
tests/test_data/: invalid.json  invalid.yaml
