[project]
name = "hexlet-code"
version = "0.1.0"
description = "A project to compare file structures"
authors = [{name = "Valera Galeev, email = <71322091+webAmoeba@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
